--- a/package.json
+++ b/package.json
@@ -1,47 +1,18 @@
 {
-  "name": "serve",
+  "name": "code",
   "version": "1.0.0",
   "description": "",
-  "private": true,
-  "egg": {
-    "declarations": true
-  },
-  "dependencies": {
-    "egg": "^2.15.1",
-    "egg-mysql": "^3.0.0",
-    "egg-scripts": "^2.11.0"
-  },
-  "devDependencies": {
-    "autod": "^3.0.1",
-    "autod-egg": "^1.1.0",
-    "egg-bin": "^4.11.0",
-    "egg-ci": "^1.11.0",
-    "egg-mock": "^3.21.0",
-    "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
-  },
-  "engines": {
-    "node": ">=10.0.0"
-  },
+  "main": "index.js",
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-serve",
-    "stop": "egg-scripts stop --title=egg-server-serve",
-    "dev": "egg-bin dev",
-    "debug": "egg-bin debug",
-    "test": "npm run lint -- --fix && npm run test-local",
-    "test-local": "egg-bin test",
-    "cov": "egg-bin cov",
-    "lint": "eslint .",
-    "ci": "npm run lint && npm run cov",
-    "autod": "autod"
-  },
-  "ci": {
-    "version": "10"
-  },
-  "repository": {
-    "type": "git",
-    "url": ""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node app.js"
   },
   "author": "",
-  "license": "MIT"
+  "license": "ISC",
+  "dependencies": {
+    "koa": "^2.13.0",
+    "koa-router": "^9.0.1",
+    "koa2-cors": "^2.0.6",
+    "mysql": "^2.18.1"
+  }
 }
